--- a/frontends/qt/server/Makefile.windows
+++ b/frontends/qt/server/Makefile.windows
@@ -5,6 +5,7 @@ BUILDMODE=c-shared
 GOARCH=amd64
 GOOS=windows
 BREEZ_LIB_DIR=../../../vendor/github.com/breez/breez-sdk-go/breez_sdk/lib/windows-amd64/
+MSVC_LIB_DIR=../build/windows/
 
 windows:
 	CGO_CFLAGS="${GOWINSECFLAGS} ${CFLAGS}" \
@@ -26,7 +27,7 @@ windows-legacy:
 	CGO_ENABLED=1 go build -mod=vendor -ldflags="-s -w" -buildmode=c-archive \
 		-o libserver.a
 	gcc server.def libserver.a -shared -lwinmm -lhid -lsetupapi -lWs2_32 -lkernel32 -ladvapi32 -lsecur32 \
-	    -lcrypt32 -lntdll -lbcrypt -lmsvcp140 -lvcruntime140 -L${BREEZ_LIB_DIR} -lbreez_sdk_bindings \
+	    -lcrypt32 -lntdll -lbcrypt -L${MSVC_LIB_DIR} -lmsvcp140 -lvcruntime140 -L${BREEZ_LIB_DIR} -lbreez_sdk_bindings \
 		-o libserver.dll -Wl,--out-implib,libserver.lib
 
 clean:
